--- a/index.html
+++ b/index.html
@@ -1,1 +1,125 @@
-mehmet han
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
+<html>
+<head>
+
+	<title>Mehmet Han | Software Engineer | mehmet@cmhan.net</title>
+	<meta http-equiv="content-type" content="text/html; charset=utf-8" />
+
+	<meta name="keywords" content="" />
+	<meta name="description" content="" />
+
+	<link rel="stylesheet" type="text/css" href="http://yui.yahooapis.com/2.7.0/build/reset-fonts-grids/reset-fonts-grids.css" media="all" /> 
+	<link rel="stylesheet" type="text/css" href="resume.css" media="all" />
+
+</head>
+<body>
+
+<div id="doc2" class="yui-t7">
+	<div id="inner">
+	
+		<div id="hd">
+			<div class="yui-gc">
+				<div class="yui-u first">
+					<h1>C. Mehmet Han</h1>
+					<h2>Software Engineer | OSCP</h2>
+					<h4><a href="mailto:mehmet@cmhan.net">E-posta</a>  | <a href="https://cmhan.net">Blog</a>  | <a href="https://www.linkedin.com/in/mehmet-han">LinkedIn</a></h2>
+				</div>
+
+				
+			</div><!--// .yui-gc -->
+		</div><!--// hd -->
+
+		<div id="bd">
+			<div id="yui-main">
+				<div class="yui-b">
+
+					<div class="yui-gf">
+						<div class="yui-u first">
+							<h2>Hakkımda</h2>
+						</div>
+						<div class="yui-u">
+							<p class="enlarge">
+								2011 yılından beri profesyonel olarak backend yazılım geliştirici, devops teknolojileri ve siber güvenlik alanlarında çalışıyorum. Şu anda Ankara merkezli bir siber güvenlik firmasında takım lideri pozisyonunda çalışmaya devam ediyorum. 
+							</p>
+						</div>
+					</div><!--// .yui-gf -->
+
+
+					<div class="yui-gf">
+	
+						<div class="yui-u first">
+							<h2>İş Deneyimi</h2>
+						</div><!--// .yui-u -->
+
+						<div class="yui-u">
+
+							<div class="job">
+								<h2>Bilge SGT</h2>
+								<h3>Yazılım Geliştirme Takım Lideri, DataFlowX</h3>
+								<h4>2019 - </h4>
+							</div>
+
+							<div class="job">
+								<h2>Comodo</h2>
+								<h3>Yazılım Mühendisi, ITSM</h3>
+								<h4>2017-2019</h4>
+							</div>
+
+							<div class="job">
+								<h2>MustCreative</h2>
+								<h3>Kurucu Ortak | Yazılım Mühendisi</h3>
+								<h4>2013-2016</h4>
+							</div>
+
+
+							<div class="job last">
+								<h2>Nokta Media</h2>
+								<h3>Yazılım Mühendisi, yemektarifleri.com | sinemalar.com | fotokritik.com</h3>
+								<h4>2011-2012</h4>
+							</div>
+
+						</div><!--// .yui-u -->
+					</div><!--// .yui-gf -->
+
+
+					<div class="yui-gf">
+	
+						<div class="yui-u first">
+							<h2>Eğitim</h2>
+						</div><!--// .yui-u -->
+
+						<div class="yui-u">
+
+							<div class="job">
+								<h2>Atılım Üniversitesi</h2>
+								<h3>Msc, Yazılım Mühendisliği</h3>
+								<h4>2013-2015</h4>
+							</div>
+
+							<div class="job last">
+								<h2>Bilkent Üniversitesi</h2>
+								<h3>Bsc, Bilgisayar Teknolojisi ve Bilişim Sistemleri</h3>
+								<h4>2006-2011</h4>
+							</div>
+
+						</div><!--// .yui-u -->
+					</div>
+
+
+				</div><!--// .yui-b -->
+			</div><!--// yui-main -->
+		</div><!--// bd -->
+
+		<div id="ft">
+			<p>Mehmet Han &mdash; <a href="mailto:mehmet@cmhan.net">mehmet@cmhan.net</a> &mdash; <a href="https://www.linkedin.com/in/mehmet-han">LinkedIn</a></p>
+		</div><!--// footer -->
+
+	</div><!-- // inner -->
+
+
+</div><!--// doc -->
+
+
+</body>
+</html>
+
