--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 
 							<div class="job last">
 								<h2>Nokta Media</h2>
-								<h3>Yazılım Mühendisi, yemektarifleri.com | sinemalar.com | fotokritik.com</h3>
+								<h3>Yazılım Mühendisi, yemektarifleri.com | sinemalar.com</h3>
 								<h4>2011-2012</h4>
 							</div>
 
