--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 						</div>
 						<div class="yui-u">
 							<p class="enlarge">
-								2011 yılından beri profesyonel olarak backend yazılım geliştirici, devops teknolojileri ve siber güvenlik alanlarında çalışıyorum. Şu anda Ankara merkezli bir siber güvenlik firmasında takım lideri pozisyonunda çalışmaya devam ediyorum. 
+								2011 yılından beri profesyonel olarak backend yazılım geliştirme, devops teknolojileri ve siber güvenlik alanlarında çalışıyorum. Şu anda Ankara merkezli bir siber güvenlik firmasında takım lideri pozisyonunda çalışmaya devam ediyorum. 
 							</p>
 						</div>
 					</div><!--// .yui-gf -->
