--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 						</div>
 						<div class="yui-u">
 							<p class="enlarge">
-								2011 yılından beri profesyonel olarak backend yazılım geliştirme, devops teknolojileri ve siber güvenlik alanlarında çalışıyorum. Şu anda Ankara merkezli bir siber güvenlik firmasında takım lideri pozisyonunda çalışmaya devam ediyorum. 
+								2011 yılından beri profesyonel olarak backend yazılım geliştirme, devops teknolojileri ve siber güvenlik alanlarında çalışıyorum. Şu anda Ankara merkezli bir siber güvenlik firmasında yazılım geliştirme lideri pozisyonunda çalışmaya devam ediyorum. 
 							</p>
 						</div>
 					</div><!--// .yui-gf -->
@@ -55,7 +55,7 @@
 
 							<div class="job">
 								<h2>Bilge SGT</h2>
-								<h3>Yazılım Geliştirme Takım Lideri, DataFlowX</h3>
+								<h3>Yazılım Geliştirme Lideri, DataFlowX</h3>
 								<h4>2019 - </h4>
 							</div>
 
