--- a/index.html
+++ b/index.html
@@ -54,8 +54,8 @@
 						<div class="yui-u">
 
 							<div class="job">
-								<h2>Bilge SGT</h2>
-								<h3>Yazılım Geliştirme Lideri, DataFlowX</h3>
+								<h2>DataFlowX</h2>
+								<h3>Yazılım Geliştirme Lideri</h3>
 								<h4>2019 - </h4>
 							</div>
 
